--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,37 +7,46 @@
           href="https://www.unisannio.it/themes/custom/unisannio/images/xLogo_header.png.pagespeed.ic.foFV83ZeJD.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style/style.css" rel="stylesheet">
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
     <script type="module" src="js/app_ws.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-<header>
-    <img src="images/ding.png" alt="DING Logo" class="dingImage bannerImage">
-    <img src="images/logo-PROMENADE.png" alt="PROMENADE Logo" class="promenadeImage bannerImage">
-    <img src="images/licit2.png" alt="PROMENADE Logo" class="licitImage bannerImage">
-</header>
-<section>
-    <nav>
-        <fieldset>
+<div class="myHeader">
+    <div class="headerElement">
+        <img src="images/ding.png" alt="DING Logo" class="headerImage">
+    </div>
+    <div class="headerElement">
+        <img src="images/logo-PROMENADE.png" alt="PROMENADE Logo" class="headerImage" id="promenadeImage">
+    </div>
+    <div class="headerElement">
+        <img src="images/licit2.png" alt="PROMENADE Logo" class="headerImage">
+    </div>
+</div>
+
+<div class="myContent">
+    <div class="commandMenu">
+        <fieldset class="myFieldset">
             <legend>Real Time</legend>
-            <button type="button" class="button" id="startTrafficButton">Traffic</button>
-            <button type="button" class="disabled-button" id="startHeatmapButton">BC</button>
-            <button type="button" class="button" id="stopTrafficButton">Stop</button>
+            <button type="button" class="button active-button" id="startTrafficButton">Traffic</button>
+            <button type="button" class="button disabled-button" id="startHeatmapButton" disabled>BC</button>
+            <button type="button" class="button active-button" id="stopTrafficButton">Stop</button>
         </fieldset>
-        <br>
-        <fieldset>
+        <fieldset class="myFieldset">
             <legend>Historical Data</legend>
             <label for="time-picker">Select a time:</label>
-            <input type="date" id="date-picker" disabled>
-            <input type="time" id="time-picker" name="appt" value="00:15" step="900">
-            <br>
-            ---
-            <button type="button" class="button" id="staticTrafficButton">Traffic</button>
-            ---
-            <button type="button" class="button" id="heatMapSnapshotButton">BC</button>
+            <div class="picker">
+                <input type="date" id="date-picker" class="picker">
+            </div>
+            <div class="picker">
+                <input type="time" id="time-picker" name="appt" value="00:15" step="900" class="picker">
+            </div>
+            <button type="button" class="button active-button" id="staticTrafficButton">Traffic</button>
             <fieldset>
-                <legend>Heatmap Normalization:</legend>
+                <legend>Heatmap</legend>
+                <button type="button" class="button active-button" id="heatMapSnapshotButton">BC</button>
+                Normalization:
                 <div class="radio-button-menu">
                     <div>
                         <input type="radio" id="global" name="radio-norm" value="global">
@@ -53,31 +62,36 @@
                     </div>
                 </div>
             </fieldset>
-            --- <br>
-            <input type="checkbox" id="overlap-box">
-            <label for="overlap-box">Overlap</label>
+            <label class="switch">
+                <input type="checkbox" id="overlap-box">
+                <span class="slider round"></span>
+            </label>
+            Overlap
         </fieldset>
-        <br>
-
-        <label class="switch">
-            <input type="checkbox" id="toggle-areas">
-            <span class="slider round"></span>
-        </label>
-        Areas
-
-        <button type="button" class="button" id="cleanMapButton">Clean Map</button>
-
-        <div id="legend-traffic" hidden>
+        <fieldset class="myFieldset">
+            <legend>Utils</legend>
+            <label class="switch">
+                <input type="checkbox" id="toggle-areas">
+                <span class="slider round"></span>
+            </label>
+            Areas
+            <button type="button" class="button active-button" id="cleanMapButton">Clean Map</button>
+        </fieldset>
+        <div id="legend-traffic">
             <h4>Legend</h4>
-            <img src="images/Legend.png" alt="Legend" class="legendImage" id="legend-traffic-img">
+            <img src="images/Legend2.png" alt="Legend" class="legendImage" id="legend-traffic-img">
+            <img src="images/LegendBC.png" alt="Legend" class="legendImage" id="legend-BC-img">
         </div>
-    </nav>
-    <div class="mapClass" id="map"></div>
-</section>
+    </div>
+    <div class="mapContainer" id="map">
+
+    </div>
+
+</div>
 
 <footer>
-    <p><b>Unisannio:</b> Carmine Colarusso, Antonio De Iasio, Lorenzo Goglia, Eugenio Zimeo</p>
-    <p><b>Licit:</b> Angelo Furno, Mohammed Amine Merzoug</p>
+    <p>&nbsp;&nbsp;<b>Unisannio:</b> Carmine Colarusso, Antonio De Iasio, Lorenzo Goglia, Eugenio Zimeo&nbsp;&nbsp;&nbsp;&nbsp;<b>Licit:</b>
+        Angelo Furno, Mohammed Amine Merzoug</p>
 </footer>
 
 </body>
