Update Legend2.png, LegendBC.png, and 5 more files...

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <link href="style/style.css" rel="stylesheet">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
     <script type="module" src="js/app_ws.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 </head>
 
 <body>
@@ -89,10 +89,10 @@
 
 </div>
 
-<footer>
-    <p>&nbsp;&nbsp;<b>Unisannio:</b> Carmine Colarusso, Antonio De Iasio, Lorenzo Goglia, Eugenio Zimeo&nbsp;&nbsp;&nbsp;&nbsp;<b>Licit:</b>
-        Angelo Furno, Mohammed Amine Merzoug</p>
-</footer>
+<div class="myFooter">
+    <span style="float:left; margin-top:0.5vh;">&nbsp;&nbsp;<b>Unisannio:</b> Carmine Colarusso, Antonio De Iasio, Lorenzo Goglia, Eugenio Zimeo</span>
+        <span style="float:right;margin-top:0.5vh;"><b>Licit:</b> Angelo Furno, Mohammed Amine Merzoug &nbsp;&nbsp;</span>
+</div>
 
 </body>
 </html>
