Update licit_logo_new.png and index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,8 @@
         <img src="images/logo-PROMENADE.png" alt="PROMENADE Logo" class="headerImage" id="promenadeImage">
     </div>
     <div class="headerElement">
-        <img src="images/licit2.png" alt="PROMENADE Logo" class="headerImage">
+<!--        <img src="images/licit2.png" alt="PROMENADE Logo" class="headerImage">-->
+        <img src="images/licit_logo_new.png" alt="PROMENADE Logo" class="headerImage">
     </div>
 </div>
 
