--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,7 +31,7 @@
         <fieldset class="myFieldset">
             <legend>Real Time</legend>
             <button type="button" class="button active-button" id="startTrafficButton">Traffic</button>
-            <button type="button" class="button disabled-button" id="startHeatmapButton" disabled>BC</button>
+            <button type="button" class="button active-button" id="startHeatmapButton" disabled>BC</button>
             <button type="button" class="button active-button" id="stopTrafficButton">Stop</button>
         </fieldset>
         <fieldset class="myFieldset">
